# SCR_Systemy_Operacyjne

./: .output_xclock.txt.swp  output.txt  program_g
Lab1/: find_script.sh
Lab1/symbolic_links/: pusty.l2
Lab10/: Makefile  hash_task  hash_task.c  test-data1.txt
Lab10/inc/: break_password.h  dictionary.h  user.h
Lab10/input_data/: test-data3.txt
Lab10/src/: break_password.c  dictionary.c  user.c
Lab11/: Makefile  hash_task
Lab11/inc/: break_password.h  break_password_shared.h
Lab11/input_data/: link_punkty.txt  output.txt  test-data1.txt  test-data3.txt
Lab11/src/: break_password.c  break_password_shared.c  hash_task.c
Lab12/: CMakeLists.txt
Lab12/inc/: log.hh  mine.hh  record.hh  robot.hh
Lab12/src/: log.cpp  main.cpp  record.cpp
Lab2/: date_script.sh  date_script.sh.save
Lab2/Zad2/: count_files.sh
Lab2/Zad3/: cut  for_loop_script.sh  for_loop_script.sh.save
Lab2/lesson/: zadanie.sh
Lab3/zadanie1/: zadanie1.sh
Lab3/zadanie2/: procesA.sh  procesB.sh  procesC  procesC.c
Lab3/zadanie3/: pilot.sh  projektor.sh
Lab3/zadanie4/: node1.sh
Lab3/zadanie5/: obliczeniaSkrypt.sh  procesObliczeniowy  procesSilnieObliczeniowy.c
Lab3/zadanie6/: skrypt.sh
Lab3/zadanie7/: basic_program.c
Lab3/zadanie8/: basic_program  basic_program.c
Lab4/moje_dodatki/: read_cpu_speed.c  real_cpu_speed
Lab4/zadanie2/: basic_program
Lab5/: output_firefox.txt  output_xclock.txt  program_g.c
Lab5/zadanie_f/: plik.txt  (+1 more)
Lab6/: plik.txt
Lab8/: Raport_8.c
Lab9/: random  random.c  sons  sons.c
zadanie_f/: strace_pico_output.txt  strace_pico_output3.txt
(+33 files in other folders)
